# autonomy-demo-scratch

./: .gitattributes  README.md
.claude/autonomy/: binding.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: c2-seed.md
.github/workflows/: gate.yml  predicate-sql-test.yml
tools/: AGENTS.md  bootstrap.sh  bootstrap.test.sh  list-project-skills.sh  list-project-skills.test.sh  measure-clear.sh  measure-clear.test.sh  repo-grep.sh  repo-grep.test.sh  resolve-memory-dir.sh  resolve-memory-dir.test.sh  run-shell-tests.sh
tools/agent-loop/: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  headless-cli-authority.md  package-lock.json  package.json  pools.example.jsonc  (+7 more)
tools/corpus-extract/: README.md  extract_epub.py  pyproject.toml
tools/corpus-extract/source/: Book1-1991-Songwriting-Essential-Guide-to-Lyric-Form-and-Structure.epub  Book2-2009-Writing-Better-Lyrics.epub  Book3-2011-Songwriting-Without-Boundaries.epub
tools/corpus-extract/tests/: conftest.py  test_extract_epub.py
tools/markdown-coupling/: check-heading-cites.sh  check-heading-cites.test.sh  cochange.py  corpus-diff.sh  corpus-diff.test.sh  corpus-scope.sh  corpus-scope.test.sh  detect.py  hotspots.tsv  lexical.py  markdown-coupling.sh  measure.sh  measure.test.sh  near_dup_gate.py  py-discovery.sh  py-discovery.test.sh  pyproject.toml  requirements.txt
tools/markdown-coupling/.cache/near-dup-index/: index.json
tools/markdown-coupling/tests/: conftest.py  test_cochange.py  test_lexical.py  test_near_dup_gate.py
(+610 files in other folders)
