[project]
name = "markdown-coupling"
version = "0.1.0"
description = "Markdown coupling baseline detector (lexical, co-change, semantic axes)."
requires-python = ">=3.14"
dependencies = [
    "datasketch==1.10.0",
    "numpy==2.4.6",
    "scipy==1.17.1",
]

[dependency-groups]
dev = ["pytest>=9.0.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
extend = "../../ruff.toml"
